[package]
name = "lily-ast"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
bumpalo = "3.9.1"
lalrpop-util = "0.19.8"
lily-interner = { version = "0.0.0", path = "../lily-interner" }
rustc-hash = "1.1.0"

[build-dependencies]
lalrpop = "0.19.8"
