[package]
name = "lily-ast"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.61"
rustc-hash = "1.1.0"
smol_str = "0.1.23"
thiserror = "1.0.32"
unicode_categories = "0.1.1"

[dev-dependencies]
insta = "1.19.0"
pretty_assertions = "1.2.1"
