[package]
name = "lily-cst"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
logos = "0.12.0"
smol_str = "0.1.23"
unicode_categories = { git = "https://github.com/swgillespie/unicode-categories", rev = "ef659e9089b604f55f37f9eebdfa7313baed7d16" }
