[package]
name = "lily-parser"
version = "0.0.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.63"
lily-lexer = { version = "0.1.0", path = "../lily-lexer" }
rustc-hash = "1.1.0"
smol_str = "0.1.23"
thiserror = "1.0.33"
